--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,12 @@
  .logo-font {
    font-family: "Playwrite AU QLD", cursive;
  }
+
+ .chef {
+   background-image: url("../src/assets/home/chef-service.jpg");
+ }
+
+ .banner3{
+  background-image: url("../src//assets/home/featured.jpg");
+ 
+ }
